--- a/roguehunter.man.html
+++ b/roguehunter.man.html
@@ -31,7 +31,7 @@ is at present server specific. Tests to identify rogue processes are hard
 coded into the script.
 </p>
 <p class="indent">
-The script attempts kill process with SIGHUP in order allow a clean termination.No attempt is made to use SIGKILL if termination fails.
+The script attempts to kill processes with SIGHUP in order allow a clean termination.No attempt is made to use SIGKILL if termination fails.
 </p>
 <p class="indent">
 A terse record of the attempted kills are maintained in the log file.
