--- a/roguehunter.man.html
+++ b/roguehunter.man.html
@@ -101,8 +101,8 @@ on a
 <i>Caldera Open Unix</i>
  host. Access to the system is achieved through
 terminal emulation from PCs. I suspect that the PCs are shutdown without
-ending the telnet/ssh session and that as a consequence SIGHUP is never
-sent to host. When the telnet session is broken the login process is 
+ending the telnet/ssh session and that as a consequence, SIGHUP is never
+sent to the host. When the telnet session is broken the login process is 
 attached to 
 <i>init</i>
  and the application process smn12 becomes a process
