--- a/roguehunter.man.html
+++ b/roguehunter.man.html
@@ -116,6 +116,6 @@ added to the log files for further consideration.
 </p>
 <h2 id="heading10">AUTHOR</h2>
 <p class="indent">
-Clifford W Fulford, City Linux. Contact fulford@fulford.net or +44 (0)709 229 5385.
+Clifford W Fulford, City Linux. Contact fulford@fulford.net or +44 (0)793 572 *612
 </p>
 	
